Added jvm config to increase heap size.